设备信息上报 & SDK 错误信息上报
